Step #3 completed (Person class)

--- a/ToDoIt.Tests/ToDoIt.Tests.csproj
+++ b/ToDoIt.Tests/ToDoIt.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TodoIt\ToDoIt.csproj" />
+    <ProjectReference Include="..\TodoIt\TodoIt.csproj" />
   </ItemGroup>
 
 </Project>
